# AI-data-analysis

./: .gitignore  README.md  app.py  pyproject.toml
data/: sample_data.csv
src/: data_processing.py  feature_engineering.py  modeling.py  streamlit_app.py  universal_analyzer.py  utils.py
