[project]
name = "ai-data-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "deflillusion",email = "defl.illusion@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "openai (>=1.78.0,<2.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "streamlit (>=1.20.0)",
    "scikit-learn (>=1.2.0)",
    "matplotlib (>=3.7.0)",
    "python-dotenv (>=1.0.0)",
    "openpyxl (>=3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
